<resources>
    <string name="app_name">DoItAndroid</string>
    <string name="sample_fragment">Sample Fragment</string>
    <string name="search" translatable="false">Search</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="slding_info_format">고객정보 %1$d/%2$d</string>
    <string name="test_string">테스트 스트링입니다</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="newPage">New</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="show_logo">Show logo</string>
    <string name="request">Request</string>
    <string name="waiting">Waiting...</string>
    <string name="done">Request done</string>
</resources>